--- a/docs/bootstrap/css/chat.css
+++ b/docs/bootstrap/css/chat.css
@@ -5,7 +5,7 @@
 .top{
     padding:10px 0;
     background:transparent;
-    background-color:rgba(0,0,0,0.4);
+    background-color:blue;
 }
 #userCount{
     margin:0 2px;
